feat: integrate Gemini AI risk assessment with quote processing and add agent tools
- Add AiRiskAssessment, AiRiskInput, GeminiRequest, and GeminiResponse DTOs for AI integration
- Implement AiRiskClient interface and GeminiAiRiskClientSdk for Gemini API calls
- Introduce AiRiskScoreService for AI-based risk scoring with fallback logic
- Update QuoteService to use AI risk assessment and adjust pricing logic accordingly
- Add agent tools: Tool abstraction, CalculateBasePriceTool, SimulatedRiskScoreTool, and ValidateQuoteTool
- Add GeminiConfig for SDK bean configuration
- Update .gitignore and application.yml for Gemini API key management
- Add google-genai dependency to pom.xml and test dependencies to build.gradle.kts
- Enhance Either with leftOrNull utility

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <version>1.7.3</version>
         </dependency>
 
+        <!-- Gemini AI Client (removido: genai-client 0.1.0, mantido google-genai) -->
+        <dependency>
+            <groupId>com.google.genai</groupId>
+            <artifactId>google-genai</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- Jackson Kotlin Module (JSON serialization) -->
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -94,6 +101,7 @@
             <version>1.13.9</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
